@@ -35,7 +35,7 @@ class BaseGuiPlus : public BaseGui
 	Q_OBJECT
 
 public:
-	BaseGuiPlus( QWidget* parent = 0, Qt::WindowFlags flags = 0 );
+	BaseGuiPlus( bool use_server, QWidget* parent = 0, Qt::WindowFlags flags = 0);
 	~BaseGuiPlus();
 
 	virtual bool startHidden();
